// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bech32 should show a long address 1`] = `
<div
  class="bech32-address"
>
  <div
    class="address"
  >
    
    cosmosftw123456789
  
  </div>
   
  <div
    class="copied"
  >
    <i
      class="material-icons"
    >
      check
    </i>
  </div>
</div>
`;

exports[`Bech32 should show a short address 1`] = `
<div
  class="bech32-address"
>
  <div
    class="address"
  >
    
    cosmosftw…6789
  
  </div>
   
  <div
    class="copied"
  >
    <i
      class="material-icons"
    >
      check
    </i>
  </div>
</div>
`;
